--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
     <div class="container mt-5">
         <h1>Contact Me!</h1>
-        <form class="row g-3" action="https://formsubmit.co86780ef7767e43efd439843e5bef2572" method="POST">
+        <form class="row g-3" action="https://formsubmit.co/86780ef7767e43efd439843e5bef2572" method="POST">
           <!-- Honeypot -->
           <input type="text" name="_honey" style="display: none;">
 
           <!-- Disable Captcha -->
           <input type="hidden" name="_captcha" value="false">
 
-          <input type="hidden" name="_next" value="https://haydn5.github.io/formsubmitdemo/success.html" >
+          <input type="hidden" name="_next" value="https://themobilesitemagician.github.io/formsubmitdemo/success.html" >
 
           <div class="col-md-6">
             <label for="firstName" class="form-label">First Name</label>
