--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
           <div class="col-md-6">
             <label for="firstName" class="form-label">First Name</label>
-            <input type="text" class="form-control" name="name" id="firstName" required>
+            <input type="text" class="form-control" name="first&nbsp;name" id="firstName" required>
           </div>
           <div class="col-md-6">
             <label for="lastName" class="form-label">Last Name</label>
