--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </div>
           <div class="col-md-12">
             <label for="comments" class="form-label">Comments, questions?</label>
-            <textarea class="form-control" id="comments" name="comments,&nbsp;questions" rows="3" required></textarea>
+            <textarea class="form-control" id="comments" name="Comments,&nbsp;questions" rows="3" required></textarea>
           </div>
           <div class="col-md-12">
             <button type="submit" class="btn btn-primary">Submit</button>
